// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptGrantPermissionsStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots. Then select
     
    <i>
      Try again
    </i>
     to connect.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      {
        "friendlyName": "Super-Duper Gadget",
        "id": "1",
        "isEmulator": false,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptGrantPermissionsStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Grant permissions on your device"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/grantPermissions"
    >
      How do I grant permissions?
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    Be sure the Accessibility Insights for Android Service on your device is turned on and has permission to access your device and capture screenshots. Then select
     
    <i>
      Try again
    </i>
     to connect.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      {
        "friendlyName": "Emulator Extraordinaire",
        "id": "1",
        "isEmulator": true,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
